[FRONT_END]: PWA + Themes + UI, remaining: connect to backend + WS

--- a/kahootbot-client/index.html
+++ b/kahootbot-client/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth font-mono">
   <head>
+    <!-- Config -->
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte + TS + Vite App</title>
+
+    <link rel="icon" href="/IMG/logo-kahootbot-128.webp" />
+    <link
+      rel="apple-touch-icon"
+      sizes="192x192"
+      href="/IMG/logo-kahootbot-192.webp"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#a855f7" />
+    <meta name="msapplication-navbutton-color" content="#3730a3" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <!-- App -->
+    <meta name="keywords" content="Kahoot, bot" />
+    <meta name="author" content="Ilingu" />
+    <meta name="application-name" content="Kahoot BOT" />
+    <meta
+      name="description"
+      content="A simple Kahoot Bot that answer randomly"
+    />
+    <!-- Google -->
+    <meta name="robots" content="index,follow,noodp" />
+    <meta name="googlebot" content="index,follow" />
   </head>
-  <body>
+  <body class="bg-zinc-900">
+    <noscript>
+      <h1>Please Enable Javascript in order to launch this app</h1>
+    </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
