[Front_end]: Upgrade for http

--- a/kahootbot-client/index.html
+++ b/kahootbot-client/index.html
@@ -26,6 +26,7 @@
     <!-- Google -->
     <meta name="robots" content="index,follow,noodp" />
     <meta name="googlebot" content="index,follow" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   </head>
   <body class="bg-zinc-900">
     <noscript>
