--- a/kahootbot-client/index.html
+++ b/kahootbot-client/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Config -->
     <meta charset="UTF-8" />
-
+    <title>KahootBOT</title>
     <link rel="icon" href="/IMG/logo-kahootbot-128.webp" />
     <link
       rel="apple-touch-icon"
